--- a/Exp2_NumericalDifferentiation/实验报告.md
+++ b/Exp2_NumericalDifferentiation/实验报告.md
@@ -46,6 +46,13 @@
 - **舍入误差**：由于计算机浮点数表示的有限精度引入的误差，通常随步长减小而增大
 
 （分析实验中观察到的截断误差和舍入误差的表现）
+截断误差表现
+ 
+在本次数值微分实验中，随着步长逐渐减小，截断误差呈现减小的趋势。从实验数据表格和误差 - 步长关系图可以看出：在前向差分和中心差分计算导数过程中，当步长相对较大时，计算得到的数值导数值与解析解的偏差相对较大，这是因为有限差分对导数定义的近似程度较差 。例如，前向差分在步长为 1.00e - 02 时，前向差分值与解析解 1.0 相比偏差较大。而随着步长不断减小，如步长减小到 1.00e - 08 左右，数值导数值与解析解的偏差明显缩小，说明此时截断误差在减小，因为更小的步长使有限差分更接近导数的真实定义。
+ 
+舍入误差表现
+ 
+舍入误差在实验中随着步长减小呈现增大的趋势。计算机在存储和计算浮点数时存在精度限制，当步长非常小时，例如步长为 1.00e - 14 ，前向差分和中心差分的相对误差都出现了增大的情况。这是因为在对极小的步长进行计算时，计算机浮点数表示的有限精度问题凸显，计算过程中的微小差异被放大，导致舍入误差增大 。在误差 - 步长关系图中，当步长减小到一定程度后，误差曲线开始上升，直观体现了舍入误差随步长减小而增大的现象。
 
 ### 4.2 前向差分与中心差分的比较
 （比较两种方法的精度差异，并解释原因）
