--- a/Exp1_QuadraticRoots/实验报告.md
+++ b/Exp1_QuadraticRoots/实验报告.md
@@ -20,7 +20,7 @@
 
 ## 4. 分析与讨论
 1. 分析两种方法在不同参数条件下的误差表现
-   在某些参数条件下，方法一可能会因为数值差异大而导致较大误差。方法二通过不同的计算方式，减少了这种误差，表现出更好的稳定性。
+### 在某些参数条件下，方法一可能会因为数值差异大而导致较大误差。方法二通过不同的计算方式，减少了这种误差，表现出更好的稳定性。
 2. 讨论数值计算中可能出现的问题及改进方法
    数值计算中的精度损失主要是由于数值差异大时有效数字的损失引起的。在处理这类问题时，应优先考虑使用方法二。为了进一步提高数值稳定性，可以考虑使用更高级的数值方法。
 
