--- a/Exp1_QuadraticRoots/实验报告.md
+++ b/Exp1_QuadraticRoots/实验报告.md
@@ -26,4 +26,22 @@
 ## 附录：核心代码片段
 ```python
 # 这里粘贴关键代码片段
-```
+```import numpy as np
+
+def standard_formula(a, b, c):
+    discriminant = b * b - 4 * a * c
+    if discriminant < 0:
+        return None
+    sqrt_discriminant = np.sqrt(discriminant)
+    x1 = (-b + sqrt_discriminant) / (2 * a)
+    x2 = (-b - sqrt_discriminant) / (2 * a)
+    return x1, x2
+
+def alternative_formula(a, b, c):
+    discriminant = b * b - 4 * a * c
+    if discriminant < 0:
+        return None
+    sqrt_discriminant = np.sqrt(discriminant)
+    x1 = (2 * c) / (-b - sqrt_discriminant)
+    x2 = (2 * c) / (-b + sqrt_discriminant)
+    return x1, x2
