--- a/Exp5_SeriesComparison/实验报告.md
+++ b/Exp5_SeriesComparison/实验报告.md
@@ -47,13 +47,14 @@ $$ \text{Err}_2 = \left| \frac{S_N^{(2)} - S_N^{(3)}}{S_N^{(3)}} \right| $$
 ### 4.1 数据记录
 | N | $S_N^{(1)}$ | $S_N^{(2)}$ | $S_N^{(3)}$ | $\text{Err}_1$ | $\text{Err}_2$ |
 |---|-------------|-------------|-------------|----------------|----------------|
-| 10 |            |             |             |                |                |
-| 100 |           |             |             |                |                |
-| 1000 |          |             |             |                |                |
-| 10000 |         |             |             |                |                |
+| 10 |-0.27656250   | -0.27656250 | -0.27656250 |    0.00e+00    |    0.00e+00   |
+| 100 |-0.27725010  | -0.27725010 | -0.27725010 |    0.00e+00    |    0.00e+00   |
+| 1000 |-0.27725887 | -0.27725887 | -0.27725887 |    0.00e+00    |    0.00e+00   |
+| 10000 |-0.27725887| -0.27725887 | -0.27725887 |    0.00e+00    |    0.00e+00   |
 
 ### 4.2 误差分析图
-（在此插入相对误差随N变化的双对数图）
+（在此插入相对误差随N变化的双对数图<img width="778" alt="截屏2025-04-16 11 06 15" src="https://github.com/user-attachments/assets/164bc9aa-92d0-4278-bd19-fb2fb9ff1f3a" />
+）
 
 ## 5. 分析与讨论
 ### 5.1 误差大小比较
@@ -84,7 +85,17 @@ $$ \text{Err}_2 = \left| \frac{S_N^{(2)} - S_N^{(3)}}{S_N^{(3)}} \right| $$
 2. 在实际编程中，如何避免类似的数值不稳定性？
 
 3. 除了本实验中的三种形式，你能想到其他数值更稳定的计算方式吗？
-
+1.为什么数学上等价的表达式在数值计算中会有如此大的差异？
+数学上等价的表达式在数值计算中会有差异，主要是因为计算机在进行数值计算时使用的是有限精度的浮点数表示。浮点数只能精确表示一部分实数，对于其他实数只能进行近似表示。在不同的计算形式中，由于运算的顺序和方式不同，会导致舍入误差的积累和传播不同。例如，在交错级数和两项求和相减的形式中，可能会出现灾难性抵消的情况，即两个非常接近的数相减，导致有效数字的丢失，从而使计算结果的精度降低。而直接求和形式由于避免了这种抵消问题，可能会具有更好的数值稳定性。
+2.在实际编程中，如何避免类似的数值不稳定性？
+选择合适的算法：优先选择数值稳定性好的算法，避免使用可能导致灾难性抵消或其他数值问题的算法。例如，在计算级数和时，可以选择直接求和的形式，而不是交错级数或两项求和相减的形式。
+数据预处理：对输入数据进行预处理，避免出现过大或过小的数值，以减少舍入误差的影响。例如，可以对数据进行归一化处理，将数据的范围调整到合适的区间。
+增加计算精度：使用更高精度的数据类型，如 numpy 中的 float64 类型，或者使用专门的高精度计算库，如 mpmath，来提高计算的精度。
+误差分析和验证：对计算结果进行误差分析和验证，评估计算结果的准确性和可靠性。可以通过与精确解或其他可靠的计算结果进行比较，来判断计算结果的误差是否在可接受的范围内。
+3.除了本实验中的三种形式，你能想到其他数值更稳定的计算方式吗？
+级数的重新排列：对于一些级数，可以通过重新排列级数的项，使其具有更好的数值稳定性。例如，对于交错级数，可以尝试将其重新排列为绝对收敛的级数，从而避免交错项带来的抵消问题。
+使用加速收敛的方法：一些加速收敛的方法，如埃特金加速法、龙贝格积分法等，可以用于提高级数的收敛速度，从而减少计算量和误差。这些方法通过对级数的部分和进行变换，使其更快地趋近于级数的真实值。
+分段计算：对于一些复杂的级数，可以将其分成若干段进行计算，然后将各段的结果相加。这样可以避免在计算过程中出现过大或过小的数值，从而提高计算的稳定性。例如，对于一些具有奇异性的级数，可以在奇异点附近进行分段计算，以避免奇异点对计算结果的影响。
 ## 附录：关键代码
 ```python
 # 在此粘贴关键代码实现
