--- a/Exp6_BesselRecursion/实验报告.md
+++ b/Exp6_BesselRecursion/实验报告.md
@@ -56,7 +56,8 @@ $$ j_l^\mathrm{normalized}(x) = j_l^\mathrm{compute}(x) \times \frac{j_0^\mathrm
 | ... | ... |                    |                        |                         |
 
 ### 4.2 误差分析图
-（在此插入三个x值对应的半对数图）
+（在此插入三个x值对应的<img width="543" alt="截屏2025-04-16 19 36 12" src="https://github.com/user-attachments/assets/8ee5909c-a86f-41e0-b4dc-5cf97da6468a" />
+半对数图）
 
 ## 5. 分析与讨论
 ### 5.1 数值稳定性分析
@@ -90,3 +91,11 @@ $$ j_l^\mathrm{normalized}(x) = j_l^\mathrm{compute}(x) \times \frac{j_0^\mathrm
 ```python
 # 在此粘贴关键代码实现
 ```
+
+
+1.为什么向上递推在 l > x 时会变得不稳定？
+向上递推在 \(l > x\) 时变得不稳定，主要原因包括：随着 l 的增大，递推公式中的系数 \(\frac{2l + 1}{x}\) 增大，导致前一阶的误差在计算当前阶时被放大；球贝塞尔函数的高阶值相对较小，小的误差对结果的影响相对较大；球诺伊曼函数在 \(l > x\) 时的影响逐渐显著，其增长特性干扰了球贝塞尔函数的递推计算，而向上递推没有有效处理这种干扰，从而使得误差不断积累，结果变得不稳定。
+2.向下递推为什么能够有效抑制误差？
+向下递推从高阶向低阶进行，初始设定的高阶值在递推过程中，由于球贝塞尔函数的性质，低阶函数值相对稳定且准确。随着递推的进行，高阶的误差对低阶的影响逐渐减小，因为低阶函数值的变化相对较小，能够更好地抵抗误差的传播。此外，归一化操作进一步保证了计算结果在尺度上的准确性，使得整个递推过程中的误差得到有效抑制，从而保证了结果的稳定性和准确性。
+3.如何选择合适的 m_start 值以保证计算精度？
+选择合适的 \(m_start\) 值需要综合考虑计算精度和计算效率。一般来说， \(m_start\) 应足够大，以确保初始设定的高阶值对低阶计算结果的影响可以忽略不计，从而保证计算精度。但 \(m_start\) 也不能过大，否则会增加不必要的计算量，降低计算效率。可以通过实验测试不同 \(m_start\) 值下的计算结果误差，选择误差较小且计算效率可接受的 \(m_start\) 值。例如，从 \(lmax + 10\) 开始逐步增大 \(m_start\) ，观察误差的变化情况，当误差不再显著减小或趋于稳定时，此时的 \(m_start\) 值就是一个比较合适的选择。同时，也可以结合球贝塞尔函数的渐近性质，分析不同 \(m_start\) 值对计算结果的影响，从而确定最佳的 \(m_start\) 值。
